--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -94,7 +94,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%% RAUL
 
-\newcommand{\E}[1]{$10^{#1}$ \eV\xspace}
+\newcommand{\e}[1]{\ensuremath{\mbox{$10^{#1}$}}\xspace}
+\newcommand{\E}[1]{\ensuremath{\mbox{$10^{#1}$}} \eV\xspace}
 
 
 \newcommand{\nmu}{\ensuremath{\mbox{$N_\mu$}}\xspace}
