--- a/bib_aliases.tex
+++ b/bib_aliases.tex
@@ -8,6 +8,7 @@
 \def\CMSPaper{Chatrchyan:2008aa}
 \def\AugerPaper{ThePierreAuger:2015rma}
 \def\KASCADEGrandePaper{Apel:2010zz}
+\def\KASCADEPaper{Antoni:2003gd}
 
 %%MODELS
 \def\QGSJetPaper{Ostapchenko:2010vb}
