--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,164 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Giacinti:2014xya,
+      author         = "Giacinti, G. and Kachelrieß, M. and Semikoz, D. V.",
+      title          = "{Explaining the Spectra of Cosmic Ray Groups above the
+                        Knee by Escape from the Galaxy}",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
+      year           = "2014",
+      number         = "4",
+      pages          = "041302",
+      doi            = "10.1103/PhysRevD.90.041302",
+      eprint         = "1403.3380",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1403.3380;%%"
+}
+
+@article{Gaisser:2013bla,
+      author         = "Gaisser, Thomas K. and Stanev, Todor and Tilav, Serap",
+      title          = "{Cosmic Ray Energy Spectrum from Measurements of Air
+                        Showers}",
+      journal        = "Front. Phys.(Beijing)",
+      volume         = "8",
+      year           = "2013",
+      pages          = "748-758",
+      doi            = "10.1007/s11467-013-0319-7",
+      eprint         = "1303.3565",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1303.3565;%%"
+}
+
+@article{Apel:2013uni,
+      author         = "Apel, W. D. and others",
+      title          = "{KASCADE-Grande measurements of energy spectra for
+                        elemental groups of cosmic rays}",
+      journal        = "Astropart. Phys.",
+      volume         = "47",
+      year           = "2013",
+      pages          = "54-66",
+      doi            = "10.1016/j.astropartphys.2013.06.004",
+      eprint         = "1306.6283",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1306.6283;%%"
+}
+
+@article{Apel:2011mi,
+      author         = "Apel, W. D. and others",
+      title          = "{Kneelike structure in the spectrum of the heavy
+                        component of cosmic rays observed with KASCADE-Grande}",
+      collaboration  = "KASCADE Grande",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "107",
+      year           = "2011",
+      pages          = "171104",
+      doi            = "10.1103/PhysRevLett.107.171104",
+      eprint         = "1107.5885",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1107.5885;%%"
+}
+
+@article{Antoni:2005wq,
+      author         = "Antoni, T. and others",
+      title          = "{KASCADE measurements of energy spectra for elemental
+                        groups of cosmic rays: Results and open problems}",
+      collaboration  = "KASCADE",
+      journal        = "Astropart. Phys.",
+      volume         = "24",
+      year           = "2005",
+      pages          = "1-25",
+      doi            = "10.1016/j.astropartphys.2005.04.001",
+      eprint         = "astro-ph/0505413",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0505413;%%"
+}
+
+@article{Antoni:2003gd,
+      author         = "Antoni, T. and others",
+      title          = "{The Cosmic ray experiment KASCADE}",
+      collaboration  = "KASCADE",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A513",
+      year           = "2003",
+      pages          = "490-510",
+      doi            = "10.1016/S0168-9002(03)02076-X",
+      SLACcitation   = "%%CITATION = NUIMA,A513,490;%%"
+}
+
+@article{Ptuskin1993,
+   author = {{Ptuskin}, V.~S. and {Rogovaya}, S.~I. and {Zirakashvili}, V.~N. and 
+	{Chuvilgin}, L.~G. and {Khristiansen}, G.~B. and {Klepach}, E.~G. and 
+	{Kulikov}, G.~V.},
+    title = "{Diffusion and drift of very high energy cosmic rays in galactic magnetic fields}",
+  journal = {A\&A},
+     year = 1993,
+    month = feb,
+   volume = 268,
+    pages = {726-735}
+}
+
+
+@article{Candia:2002qd,
+      author         = "Candia, Julian and Mollerach, Silvia and Roulet, Esteban",
+      title          = "{Cosmic ray drift, the second knee and galactic
+                        anisotropies}",
+      journal        = "JHEP",
+      volume         = "12",
+      year           = "2002",
+      pages          = "032",
+      doi            = "10.1088/1126-6708/2002/12/032",
+      eprint         = "astro-ph/0207143",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0207143;%%"
+}
+
+@article{Peters1961,
+author = {Peters, B},
+doi = {10.1007/BF02783106},
+issn = {1827-6121},
+journal = {Il Nuovo Cimento (1955-1965)},
+month = {nov},
+number = {4},
+pages = {800--819},
+title = {{Primary cosmic radiation and extensive air showers}},
+url = {https://doi.org/10.1007/BF02783106},
+volume = {22},
+year = {1961}
+}
+
+
+@article{SwordyPlot2001,
+   author = {Swordy, S.P.},
+    title = "{The Energy Spectra and Anisotropies of Cosmic Rays}",
+  journal = {Space Sci. Rev.},
+     year = 2001,
+    month = oct,
+   volume = 99,
+    pages = {85-94}
+}
+
+
+@article{Mollerach:2017idb,
+      author         = "Mollerach, S. and Roulet, E.",
+      title          = "{Progress in high-energy cosmic ray physics}",
+      journal        = "Prog. Part. Nucl. Phys.",
+      volume         = "98",
+      year           = "2018",
+      pages          = "85-118",
+      doi            = "10.1016/j.ppnp.2017.10.002",
+      eprint         = "1710.11155",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1710.11155;%%"
+}
+
 @article{Hillas:1982wz,
       author         = "Hillas, A. M.",
       title          = "{THE SENSITIVITY OF CHERENKOV RADIATION PULSES TO THE
