--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,190 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Aglietta:2007yx,
+      author         = "Abraham, J. and others",
+      title          = "{Upper limit on the cosmic-ray photon flux above
+                        10$^{19}$ eV using the surface detector of the Pierre
+                        Auger Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "Astropart. Phys.",
+      volume         = "29",
+      year           = "2008",
+      pages          = "243-256",
+      doi            = "10.1016/j.astropartphys.2008.01.003",
+      eprint         = "0712.1147",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "FERMILAB-PUB-07-736-A",
+      SLACcitation   = "%%CITATION = ARXIV:0712.1147;%%"
+}
+
+@article{Olinto2000,
+author = {Olinto, a V},
+journal = {Phys.Rep.},
+pages = {329--348},
+title = {{Ultra high energy cosmic rays: the theoretical challenge}},
+url = {papers3://publication/uuid/36651A17-8CB6-44DD-9BFB-26C9FB011049},
+volume = {333},
+year = {2000}
+}
+
+
+@article{Waxman:2004ez,
+      author         = "Waxman, Eli",
+      title          = "{Gamma-ray bursts: Potential sources of ultra high energy
+                        cosmic-rays}",
+      booktitle      = "{Proceedings, 13th International Symposium on Very
+                        High-Energy Cosmic Ray Interactions (ISVHECRI 2004):
+                        Pylos, Greece, September 6-12, 2004}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "151",
+      year           = "2006",
+      pages          = "46-53",
+      doi            = "10.1016/j.nuclphysbps.2005.07.008",
+      eprint         = "astro-ph/0412554",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0412554;%%"
+}
+
+@article{Vietri1995,
+   author = {{Vietri}, M.},
+    title = "{The Acceleration of Ultra--High-Energy Cosmic Rays in Gamma-Ray Bursts}",
+  journal = {Astrophis.J.},
+   eprint = {astro-ph/9506081},
+ keywords = {ACCELERATION OF PARTICLES, ISM: COSMIC RAYS, GAMMA RAYS: BURSTS},
+     year = 1995,
+    month = nov,
+   volume = 453,
+    pages = {883},
+      doi = {10.1086/176448}
+}
+
+@article{Fang:2012rx,
+      author         = "Fang, Ke and Kotera, Kumiko and Olinto, Angela V.",
+      title          = "{Newly-born pulsars as sources of ultrahigh energy cosmic
+                        rays}",
+      journal        = "Astrophys. J.",
+      volume         = "750",
+      year           = "2012",
+      pages          = "118",
+      doi            = "10.1088/0004-637X/750/2/118",
+      eprint         = "1201.5197",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1201.5197;%%"
+}
+
+@article{Hillas1984,
+author = {Hillas, a M},
+doi = {10.1146/annurev.aa.22.090184.002233},
+journal = {Annual Review of Astronomy and Astrophysics},
+number = {1},
+pages = {425--444},
+title = {{The Origin of Ultra-High-Energy Cosmic Rays}},
+volume = {22},
+year = {1984}
+}
+
+
+@article{Blasi:2012yx,
+      author         = "Blasi, Pasquale",
+      title          = "{Theoretical Challenges in Acceleration and Transport of
+                        Ultra High Energy Cosmic Rays: A Review}",
+      booktitle      = "{Proceedings,  International Symposium on Future
+                        Directions in UHECR Physics (UHECR2012): CERN, Geneva,
+                        Switzerland, February 13-16, 2012}",
+      journal        = "EPJ Web Conf.",
+      volume         = "53",
+      year           = "2013",
+      pages          = "01002",
+      doi            = "10.1051/epjconf/20135301002",
+      eprint         = "1208.1682",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1208.1682;%%"
+}
+
+@article{Drury:1983zz,
+      author         = "Drury, L. Oc.",
+      title          = "{An introduction to the theory of diffusive shock
+                        acceleration of energetic particles in tenuous plasmas}",
+      journal        = "Rept. Prog. Phys.",
+      volume         = "46",
+      year           = "1983",
+      pages          = "973-1027",
+      doi            = "10.1088/0034-4885/46/8/002",
+      SLACcitation   = "%%CITATION = RPPHA,46,973;%%"
+}
+
+@article{Blandford:1978ky,
+      author         = "Blandford, R. D. and Ostriker, J. P.",
+      title          = "{Particle Acceleration by Astrophysical Shocks}",
+      journal        = "Astrophys. J.",
+      volume         = "221",
+      year           = "1978",
+      pages          = "L29-L32",
+      doi            = "10.1086/182658",
+      SLACcitation   = "%%CITATION = ASJOA,221,L29;%%"
+}
+
+@article{Bell:1978zc,
+      author         = "Bell, A. R.",
+      title          = "{The Acceleration of cosmic rays in shock fronts. I}",
+      journal        = "Mon. Not. Roy. Astron. Soc.",
+      volume         = "182",
+      year           = "1978",
+      pages          = "147-156",
+      SLACcitation   = "%%CITATION = MNRAA,182,147;%%"
+}
+
+@article{Krymsky1977,
+      author         = "Krymsky, G.F.",
+      title          = "{A regular mechanism for the acceleration of charged 
+particles on the front of a shock wave}",
+      journal        = "Sov.Phys.Dokl.",
+      volume         = "23",
+      year           = "1977",
+      pages          = "327"
+}
+
+
+@article{Axford1977,
+   author = {{Axford}, W.~I. and {Leer}, E. and {Skadron}, G.},
+    title = "{The acceleration of cosmic rays by shock waves}",
+  journal = {International Cosmic Ray Conference},
+     year = 1977,
+   volume = 11,
+    pages = {132-137}
+}
+
+@article{Torres:2004hk,
+      author         = "Torres, Diego F. and Anchordoqui, Luis A.",
+      title          = "{Astrophysical origins of ultrahigh energy cosmic rays}",
+      journal        = "Rept. Prog. Phys.",
+      volume         = "67",
+      year           = "2004",
+      pages          = "1663-1730",
+      doi            = "10.1088/0034-4885/67/9/R03",
+      eprint         = "astro-ph/0402371",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "NUB-3244-TH-04",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0402371;%%"
+}
+
+@article{Fermi:1949ee,
+      author         = "Fermi, Enrico",
+      title          = "{On the Origin of the Cosmic Radiation}",
+      journal        = "Phys. Rev.",
+      volume         = "75",
+      year           = "1949",
+      pages          = "1169-1174",
+      doi            = "10.1103/PhysRev.75.1169",
+      SLACcitation   = "%%CITATION = PHRVA,75,1169;%%"
+}
+
 @article{Giacinti:2014xya,
       author         = "Giacinti, G. and Kachelrieß, M. and Semikoz, D. V.",
       title          = "{Explaining the Spectra of Cosmic Ray Groups above the
